--- a/recursos/config.yml
+++ b/recursos/config.yml
@@ -10,4 +10,17 @@ Blocos:
   REDSTONE_ORE: 6
   DIAMOND_ORE: 15
   EMERALD_ORE: 1
-
+Monstros:
+  ZOMBIE: 5
+  SKELETON: 5
+  CREEPER: 8
+  ENDERMAN: 10
+  ZOMBIE_PIGMAN: 9
+  SPIDER: 6
+  CAVE_SPDIDER: 6
+Coletaveis:
+  DIRT: 1
+  GRASS_BLOCK: 2
+  COBBLESTONE: 1
+  STONE: 1
+  IRON: 2
